--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ ____/ // /__ / /_/ / /_ / /_      / /_____       _  /| | _  /   / /_/ // /_/ /_(
         <link rel="canonical" href="https://neodigm.github.io/wlt_global_production_studio/" />
         <meta name="msapplication-TileColor" content="#fed20b">
         <meta name="theme-color" content="#fed20b">
+
         <style type="text/css">
     /* Document */
     html *
@@ -288,6 +289,52 @@ html
 }
 
         </style>
+        <style type="text/css">
+            .l-snackbar .snackbar__cont {
+                border-radius:4px;
+                background: linear-gradient(45deg,#5cabdc 0%,#3c8bbc 100%);
+
+                border:solid 1px #938970;
+                left:38%;
+                min-width:188px;
+                padding:14px 14px;
+                position:fixed;
+                transition:bottom 0.6s ease-in-out;
+                user-select:none;
+                z-index:6408;
+            }
+            .l-snackbar .snackbar__cont--hide {
+                bottom:-112px;
+                transition:bottom 0.6s ease-in-out;
+            }
+            .l-snackbar .snackbar__cont--show {
+                bottom:4px;
+                transition:bottom 0.6s ease-in-out;
+            }
+            .l-snackbar .snackbar__progbar {
+                background-color: #edba08;
+                height: 2px;
+                padding: 0; margin: -0;
+                position: relative;
+                top: -10px;
+            }
+            .l-snackbar .snackbar__cont--hide .snackbar__progbar {
+                width: 0%;
+                transition:all .1s ease-in-out;
+            }
+            .l-snackbar .snackbar__cont--show .snackbar__progbar {
+                width: 100%;
+                transition:all 6s ease-in-out;
+            }
+            .l-snackbar .snackbar__msg {
+                color:#fff;
+                font-family:sans-serif;
+                font-size:16px;
+                margin:2px;
+                text-align:center;
+                white-space:nowrap;
+            }
+        </style>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </head>
     <body>
@@ -383,7 +430,12 @@ html
             </section>
 
         </main>
-
+        <ltdc-snackbar class="l-snackbar"><!--  Component Begin  -->
+            <section id="js-snackbar__id" class="snackbar__cont snackbar__cont--hide" aria-live="polite" aria-atomic="true">
+                <div class="snackbar__progbar"></div>
+                <p class="snackbar__msg"></p>
+            </section>
+        </ltdc-snackbar><!--  Component End  -->
         <script>
             "use strict";
             let dc = document;
@@ -415,6 +467,7 @@ html
                     [].slice.call( dc.querySelectorAll( ".js-city option" ) ).filter( function( e ){
                         e.outerHTML = "";  //  Remove existing cities
                     });
+                    snck.q("Select a City in|" + this.value );
                     oLoca[ this.value ].filter( function( city ){
                         let eOpt = document.createElement("option");
                         eOpt.innerHTML = city;
@@ -422,6 +475,28 @@ html
                     });
                 }
             });
+        </script>
+        <script>
+            "use strict";  //  Popup Dialog | Snackbar Toast
+            var snck=(function(doc,eID){var _nTimeout=5400,_aQ=[];
+                var _eSb=doc.getElementById(eID),_eSbText=_eSb.querySelectorAll("P")[0];
+                var _fClose=function(){_aQ.shift();
+                _eSb.classList.remove("snackbar__cont--show");
+            _eSb.classList.add("snackbar__cont--hide");
+            if(_aQ.length!=0){setTimeout(_fOpen,1200);
+            }};
+            var _fOpen=function(){_eSbText.innerHTML=_aQ[0].replace("|","<br>");
+            _eSb.style.left=((document.body.clientWidth/2)-(_eSb.clientWidth/2))+"px";
+            _eSb.classList.remove("snackbar__cont--hide");
+            _eSb.classList.add("snackbar__cont--show");
+            if ("vibrate" in navigator) { 
+            window.navigator.vibrate([16,8]);
+            }
+            setTimeout(_fClose,_nTimeout);
+            };
+            return{q:function(sMsg){_aQ.push(sMsg);
+                if(_aQ.length==1){_fOpen();
+            }}}})(document,"js-snackbar__id");
         </script>
     </body>
 </html>
